opam-version: "2.0"
version: "0.1.0"
synopsis: "Library aiming to provide data from hub.docker.com"
maintainer: "Kate <kit.ty.kate@disroot.org>"
authors: "Kate <kit.ty.kate@disroot.org>"
license: "MIT"
homepage: "https://github.com/kit-ty-kate/ocaml-docker-hub"
bug-reports: "https://github.com/kit-ty-kate/ocaml-docker-hub/issues"
dev-repo: "git+https://github.com/kit-ty-kate/ocaml-docker-hub.git"
doc: "https://kit-ty-kate.github.io/ocaml-docker-hub/"
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "ocaml" {>= "4.10"}
  "dune" {>= "2.0"}
  "http-lwt-client" {>= "0.0.2"}
  "lwt"
  "lwt_ppx"
  "yojson" {>= "1.6.0"}
]
