opam-version: "2.0"
version: "0.2.0"
synopsis: "Library aiming to provide data from hub.docker.com"
maintainer: "Kate <kit-ty-kate@outlook.com>"
authors: "Kate <kit-ty-kate@outlook.com>"
license: "MIT"
homepage: "https://github.com/kit-ty-kate/ocaml-docker-hub"
bug-reports: "https://github.com/kit-ty-kate/ocaml-docker-hub/issues"
dev-repo: "git+https://github.com/kit-ty-kate/ocaml-docker-hub.git"
doc: "https://kit-ty-kate.github.io/ocaml-docker-hub/"
build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "ocaml" {>= "4.13"}
  "dune" {>= "2.0"}
  "http-lwt-client" {>= "0.2.0"}
  "lwt" {>= "2.0.0"}
  "yojson" {>= "1.6.0"}
]
